[package]
name = "tag-search"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
chrono = "*"
once_cell = "*"
rustc-hash = "*"
num_cpus = "*"
tag-geotag = {path = "../tag-geotag"}
actix-rt = "1"

[dependencies.serde]
version = "*"
default-features = false
features = ["std", "derive"]

[dependencies.actix-web]
version = "2"
default-features = false

[dependencies.parking_lot]
version = "*"
optional = true

[features]
default = []
cache = ["parking_lot"]
