[package]
name = "tag-search"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", default-features = false }
once_cell = { version = "*", features = ["parking_lot"] }
rustc-hash = "*"
tag-geotag = { path = "../tag-geotag"}
actix-rt = "1"
actix-web = { version = "2", default-features = false }
parking_lot = { version = "*", optional = true }

[dependencies.serde]
version = "*"
default-features = false
features = ["derive"]

[features]
default = []
cache = ["parking_lot"]
