[package]
name = "tag-search"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false }
once_cell = { version = "1.10.0", default-features = false, features = [
  "std",
  "parking_lot",
] }
rustc-hash = { version = "1.1.0", default-features = false, features = ["std"] }
tag-geotag = { path = "../tag-geotag" }
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
parking_lot = { version = "0.12.0", optional = true, default-features = false, features = [] }

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[features]
default = []
cache = ["parking_lot"]
